WIP: virtualization looks better, but is janky

--- a/src/templates/ui-grid/ui-grid-body.html
+++ b/src/templates/ui-grid/ui-grid-body.html
@@ -1,9 +1,9 @@
 <div ui-grid-viewport class="ui-grid-viewport">
   <div class="ui-grid-canvas">
-    <div ng-repeat="row in renderedRows" class="ui-grid-row">
+    <div ng-repeat="row in renderedRows track by $index" class="ui-grid-row">
       <div ui-grid-row="row" row-index="$index"></div>
     </div>
   </div>
-  
+
   <div ui-grid-scrollbar></div>
 </div>
