WIP: use ngStyle instead of <style> block for rows

--- a/src/templates/ui-grid/ui-grid-body.html
+++ b/src/templates/ui-grid/ui-grid-body.html
@@ -1,6 +1,6 @@
 <div ui-grid-viewport class="ui-grid-viewport">
   <div class="ui-grid-canvas">
-    <div ng-repeat="row in renderedRows track by $index" class="ui-grid-row">
+    <div ng-repeat="row in renderedRows track by $index" class="ui-grid-row" ng-style="rowStyle($index)">
       <div ui-grid-row="row" row-index="$index"></div>
     </div>
   </div>
