Use relative row positioning.  calculate first rendered row's top-margin

--- a/src/less/body.less
+++ b/src/less/body.less
@@ -15,7 +15,7 @@
 }
 
 .ui-grid-row {
-  position: absolute;
+  //position: absolute;
   // border-bottom: 1px solid @borderColor;
 
   &:nth-child(odd) .ui-grid-cell {
