--- a/src/templates/ui-grid/ui-grid-body.html
+++ b/src/templates/ui-grid/ui-grid-body.html
@@ -1,7 +1,11 @@
-<div ui-grid-viewport class="ui-grid-viewport">
-  <div class="ui-grid-canvas">
-    <div ng-repeat="row in renderedRows track by $index" class="ui-grid-row" ng-style="rowStyle($index)">
-      <div ui-grid-row="row" row-index="$index"></div>
+<div class="ui-grid-body">
+  <div class="ui-grid-scrollbar-box">
+    <div ui-grid-viewport class="ui-grid-viewport">
+      <div class="ui-grid-canvas">
+        <div ng-repeat="row in renderedRows track by $index" class="ui-grid-row" ng-style="rowStyle($index)">
+          <div ui-grid-row="row" row-index="$index"></div>
+        </div>
+      </div>
     </div>
   </div>
 
