--- a/src/less/body.less
+++ b/src/less/body.less
@@ -24,7 +24,7 @@
 }
 
 .ui-grid-row {
-  position: absolute;
+  //position: absolute;
   // border-bottom: 1px solid @borderColor;
 
   &:nth-child(odd) .ui-grid-cell {
