--- a/src/templates/ui-grid/ui-grid-body.html
+++ b/src/templates/ui-grid/ui-grid-body.html
@@ -2,7 +2,7 @@
   <div class="ui-grid-scrollbar-box">
     <div ui-grid-viewport class="ui-grid-viewport">
       <div class="ui-grid-canvas">
-        <div ng-repeat="row in renderedRows track by $index" class="ui-grid-row" ng-style="rowStyle($index)">
+        <div ng-repeat="row in grid.renderedRows track by $index" class="ui-grid-row" ng-style="rowStyle($index)">
           <div ui-grid-row="row" row-index="$index"></div>
         </div>
       </div>
