--- a/src/js/edit/templates/cellEdit.html
+++ b/src/js/edit/templates/cellEdit.html
@@ -6,3 +6,5 @@
 		EDITABLE_CELL_TEMPLATE
 	</div>
 </div>
+
+<div class="ngCellText" ng-class="col.colIndex()"><span ng-cell-text>{{COL_FIELD CUSTOM_FILTERS}}</span></div>
