Fix ui-grid-cell styling

--- a/src/templates/ui-grid/uiGridCell.html
+++ b/src/templates/ui-grid/uiGridCell.html
@@ -1,1 +1,1 @@
-<div class="ngCellText" ng-class="col.colIndex()"><span ng-cell-text>{{COL_FIELD CUSTOM_FILTERS}}</span></div>
+<div class="ui-grid-cell-contents">{{COL_FIELD CUSTOM_FILTERS}}</div>
