Give header row a gradient background

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,11 +1,13 @@
 .ui-grid-top-panel {
     position: relative;
     // z-index: 1;
-    background-color: @darkGray; // #EAEAEA
+    // background-color: @darkGray; // #EAEAEA
     border-bottom: 1px solid @borderColor; // #D4D4D4
 
     overflow: hidden;
     font-weight: bold;
+
+    .gradient(#f3f3f3, #eee, #fff);
 }
 
 .ui-grid-header-cell {
