fix(uiGrid): Fix elm height calc for hidden grids
The header row height could not be calculated when the grid was hidden,
because the absolutely-positioned cells did not count towards the
container height.

To fix this, I made changes to the elementHeight/elementWidth functions
that will, if the element in question is hidden, append the element to the
document body with visibility: hidden.

I also had to switch the cells from being absolutely positioned to
relatively positioned and floated left.  Hopefully this will not have any
further repercussions

--- a/src/less/cell.less
+++ b/src/less/cell.less
@@ -1,8 +1,8 @@
 .ui-grid-cell {
   overflow: hidden;
-  position: absolute;
-//  top: 0;
-//  bottom: 0;
+  // position: absolute;
+  position: relative;
+  float: left;
   background-color: inherit;
 }
 
