--- a/src/less/header.less
+++ b/src/less/header.less
@@ -8,10 +8,21 @@
     font-weight: bold;
 
     .gradient(#f3f3f3, #eee, #fff);
+
+  // &:before, &:after {
+  //   content:"";
+  //   display:table;
+  // }
+
+  // &:after {
+  //   clear:both;
+  // }
 }
 
 .ui-grid-header-cell {
-  position: absolute;
+  // position: absolute;
+  position: relative;
+  float: left;
   top: 0;
   bottom: 0;
   background-color: inherit;
