--- a/src/templates/ui-grid/ui-grid-header.html
+++ b/src/templates/ui-grid/ui-grid-header.html
@@ -1,8 +1,7 @@
 <div class="ui-grid-top-panel">
   <div class="ui-grid-header">
-    <div ng-repeat="col in grid.columns" class="ui-grid-header-cell col{{ $index }}"> <!-- ng-style="{ height: col.headerRowHeight }" -->
-      <div class="ui-grid-vertical-bar">&nbsp;</div> <!-- ng-style="{height: col.headerRowHeight}" ng-class="{ ngVerticalBarVisible: !$last }" -->
-      <!-- <div ng-header-cell></div> -->
+    <div ng-repeat="col in grid.columns" class="ui-grid-header-cell col{{ $index }}">
+      <div class="ui-grid-vertical-bar">&nbsp;</div>
       <div class="ui-grid-cell-contents">{{ col.displayName }}</span></div>
     </div>
   </div>
