--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,5 +1,7 @@
 
-@prefix: ui-grid-;
+/* This file contains variable declarations */
+
+/*-- VARIABLES (DO NOT REMOVE THESE COMMENTS) --*/
 
 @rowColorEven: @middleGray;
 @rowColorOdd: @lightGray;
@@ -33,3 +35,7 @@
 
 // Color for buttons
 @buttonColor: lighten(#333, 10%);
+
+@scrollbarWidth: 7px;
+
+/*-- END VARIABLES --*/
