--- a/src/less/body.less
+++ b/src/less/body.less
@@ -2,6 +2,8 @@
 .ui-grid-body {
   position: relative;
   overflow: hidden;
+
+  .border-radius(0, @gridBorderRadius, @gridBorderRadius, 0);
 }
 
 .ui-grid-scrollbar-box {
