--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,41 +1,37 @@
 
-/* This file contains variable declarations */
+/* This file contains variable declarations (do not remove this line) */
 
 /*-- VARIABLES (DO NOT REMOVE THESE COMMENTS) --*/
 
-@rowColorEven: @middleGray;
-@rowColorOdd: @lightGray;
+// Grid styles
+@gridBorderWidth: 1px;
+@gridBorderRadius: 0;
 
-@backgroundColor: #fdfdfd;
+// Colors for header gradient
+@headerBackgroundColor: #f3f3f3;
+@headerGradientStart: #eee;
+@headerGradientStop: #fff;
+
+// Colors used for row alternation
+@rowColorEven: #f3f3f3;
+@rowColorOdd: #fdfdfd;
 
 // Gray color for header and footer and panels
-@darkGray: #EAEAEA;
 
-@panelColor: @darkGray;
+// Color for borders
+@borderColor: #d4d4d4;
 
-// Gray colors used for row alternation
-@lightGray: #fdfdfd;
-@middleGray: #f3f3f3;
+// TODO: colors for buttons
 
-// Gray for borders
-@darkAccentGray: #d4d4d4;
-@borderColor: @darkAccentGray;
+// TODO: color for menu background
 
-// Used for columnmenu buton
-@grayGreen: #bdd0cb;
+// TODO: color  for row selections
 
-// Used for column menu background
-@darkGrayGreen: darken(@grayGreen, 10%);
+// TODO: color for cell selections
 
-// Used for row selections
-@grayBlue: #C9DDE1; // #b3c4c7;
-
-// Used for cell selections
-@darkGrayBlue: #b3c4c7;
-
-// Color for buttons
-@buttonColor: lighten(#333, 10%);
-
+@scrollbarBackground: rgba(0, 0, 0, 0.5);
 @scrollbarWidth: 7px;
+@scrollbarBorderRadius: @scrollbarWidth;
+@scrollbarShadow: 0 0 0px #fff;
 
-/*-- END VARIABLES --*/
+/*-- END VARIABLES (DO NOT REMOVE THESE COMMENTS) --*/
