WIP: added download/copy CSS modal

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -3,9 +3,12 @@
 
 /*-- VARIABLES (DO NOT REMOVE THESE COMMENTS) --*/
 
-// Grid styles
+/**
+* @section Grid styles
+* @description
+*/
 @gridBorderWidth: 1px;
-@gridBorderRadius: 0;
+@gridBorderRadius: 0px;
 
 // Colors for header gradient
 @headerBackgroundColor: #f3f3f3;
