WIP: lexing variable section

--- a/src/less/grid.less
+++ b/src/less/grid.less
@@ -12,7 +12,7 @@
 }
 
 .ui-grid-header-cell:not(:last-child) .ui-grid-vertical-bar, .ui-grid-cell:not(:last-child) .ui-grid-vertical-bar {
-  width: 1px;
+  width: @gridBorderWidth;
   background-color: @borderColor;
 }
 
