--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -5,24 +5,28 @@
 
 /**
 * @section Grid styles
-* @description
 */
 @gridBorderWidth: 1px;
 @gridBorderRadius: 0px;
+@borderColor: #d4d4d4;
 
-// Colors for header gradient
+
+/**
+* @section Header styles
+*/
+
+/** @description Colors for header gradient */
 @headerBackgroundColor: #f3f3f3;
 @headerGradientStart: #eee;
 @headerGradientStop: #fff;
 
-// Colors used for row alternation
+/**
+* @section Grid body styles
+*/
+
+/** @description Colors used for row alternation */
 @rowColorEven: #f3f3f3;
 @rowColorOdd: #fdfdfd;
-
-// Gray color for header and footer and panels
-
-// Color for borders
-@borderColor: #d4d4d4;
 
 // TODO: colors for buttons
 
@@ -32,6 +36,9 @@
 
 // TODO: color for cell selections
 
+/**
+* @section Scrollbar styles
+*/
 @scrollbarBackground: rgba(0, 0, 0, 0.5);
 @scrollbarWidth: 7px;
 @scrollbarBorderRadius: @scrollbarWidth;
