--- a/src/less/cell.less
+++ b/src/less/cell.less
@@ -17,3 +17,8 @@
   text-overflow: ellipsis;
   overflow: hidden;
 }
+
+.ui-grid-cell-contents:focus {
+  outline: 0;
+  background-color: @focusedCell;
+}
