--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -35,6 +35,7 @@
 // TODO: color  for row selections
 
 // TODO: color for cell selections
+@focusedCell: #b3c4c7;
 
 /**
 * @section Scrollbar styles
