--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -41,7 +41,8 @@
 * @section Scrollbar styles
 */
 @scrollbarBackground: rgba(0, 0, 0, 0.5);
-@scrollbarWidth: 7px;
+@scrollbarBackgroundHover: rgba(0, 0, 0, 0.6);
+@scrollbarWidth: 14px;
 @scrollbarBorderRadius: @scrollbarWidth;
 @scrollbarShadow: 0 0 0px #fff;
 
