Added grip style
- up, hover, scrolling styles.

--- a/src/less/scrollbar.less
+++ b/src/less/scrollbar.less
@@ -30,3 +30,6 @@
 .ui-grid-scrollbar:hover {
   background: @scrollbarBackgroundHover;
 }
+.ui-grid-scrollbar.ui-scrolling {
+  background: @scrollbarBackgroundScrolling;
+}
