--- a/src/templates/ui-grid/ui-grid-scrollbar.html
+++ b/src/templates/ui-grid/ui-grid-scrollbar.html
@@ -1,1 +1,1 @@
-<div class="ui-grid-scrollbar ui-grid-scrollbar-vertical" ng-show="showScrollbar()"></div>
+<div class="ui-grid-scrollbar ui-grid-scrollbar-vertical" ng-show="showScrollbar()" ng-mousedown="className='ui-scrolling'" ng-mouseup="className=''" ng-class="className"></div>
