--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -46,5 +46,7 @@
 @scrollbarWidth: 14px;
 @scrollbarBorderRadius: @scrollbarWidth;
 @scrollbarShadow: 0 0 0px #fff;
+@scrollbarBorder: none;
+@scrollbarBorderScrolling: none;
 
 /*-- END VARIABLES (DO NOT REMOVE THESE COMMENTS) --*/
