--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -19,12 +19,14 @@
 @headerBackgroundColor: #f3f3f3;
 @headerGradientStart: #eee;
 @headerGradientStop: #fff;
+@headerVerticalBarColor: @borderColor;
 
 /**
 * @section Grid body styles
 */
 
 /** @description Colors used for row alternation */
+@verticalBarColor: @borderColor;
 @rowColorEven: #f3f3f3;
 @rowColorOdd: #fdfdfd;
 
