Make scrollbar scrolling class remove correctly on mouseup

--- a/src/templates/ui-grid/ui-grid-body.html
+++ b/src/templates/ui-grid/ui-grid-body.html
@@ -9,5 +9,5 @@
     </div>
   </div>
 
-  <div ui-grid-scrollbar></div>
+  <div ui-grid-scrollbar scrolling-class="ui-grid-scrolling"></div>
 </div>
