Make scrollbar look like Chrome's by default

--- a/src/less/scrollbar.less
+++ b/src/less/scrollbar.less
@@ -33,7 +33,7 @@
   background: @scrollbarBackgroundHover;
 }
 
-.ui-grid-scrollbar.ui-scrolling {
+.ui-grid-scrollbar.ui-grid-scrolling {
   background: @scrollbarBackgroundScrolling;
   border: @scrollbarBorderScrolling;
 }
