--- a/src/templates/ui-grid/ui-grid-body.html
+++ b/src/templates/ui-grid/ui-grid-body.html
@@ -9,5 +9,6 @@
     </div>
   </div>
 
-  <div ui-grid-scrollbar scrolling-class="ui-grid-scrolling"></div>
+  <div ui-grid-scrollbar type="vertical" scrolling-class="ui-grid-scrolling"></div>
+  <div ui-grid-scrollbar type="horizontal" scrolling-class="ui-grid-scrolling"></div>
 </div>
