Adding horizontal scrollbar functionality

--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -25,7 +25,8 @@
 
     {{ columnStyles }}
 
-    {{ grid.scrollbarStyles }}
+    {{ grid.verticalScrollbarStyles }}
+    {{ grid.horizontalScrollbarStyles }}
   </style>
 
   <div ui-grid-header></div>
