refactor how edit was removing elements so it wouldn't override other ngcell directives; added enableCellFocus and Edit tutorial

--- a/src/less/cell.less
+++ b/src/less/cell.less
@@ -18,6 +18,13 @@
   overflow: hidden;
 }
 
+.ui-grid-cell-contents-hidden {
+  visibility: hidden;
+  width: 0;
+  height:0;
+  display: none;
+}
+
 .ui-grid-cell-contents:focus {
   outline: 0;
   background-color: @focusedCell;
