--- a/src/templates/ui-grid/edit/cellTextEditor.html
+++ b/src/templates/ui-grid/edit/cellTextEditor.html
@@ -1,1 +1,1 @@
-<input ng-class="'colt' + col.index" ng-input="COL_FIELD" ng-model="COL_FIELD" ng-blur="stopEdit()" />
+<input ng-class="'colt' + col.index" ng-input="COL_FIELD" ng-model="COL_FIELD" />
