Started to sketch out some elements for sorting
arrow.svg is styled with sorting.less
can be flipped with .down

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -32,6 +32,20 @@
 
 // TODO: colors for buttons
 
+/**
+* @section Sort arrow colors
+*/
+
+@sortArrowBackgroundColor: #aaaaaa;
+@sortArrowBorderColor: #777777;
+
+
+/** @description Colors for header gradient */
+@headerBackgroundColor: #f3f3f3;
+@headerGradientStart: #eee;
+@headerGradientStop: #fff;
+@headerVerticalBarColor: @borderColor;
+
 // TODO: color for menu background
 
 // TODO: color  for row selections
