WIP: grid canvas width calculation is working, basically, but somehow I've broken the virtualization, both horizontal and vertical. It's not properly scrolling and rendering rows at the right rate. Looks like the range is off?

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -14,7 +14,13 @@
     .border-radius(@topPanelRadius, 0, 0, @topPanelRadius);
 }
 
-.ui-grid-header {
+.ui-grid-header-viewport {
+  overflow: hidden;
+}
+
+.ui-grid-header-canvas {
+  position: relative;
+
   // Clearfix for floating header cells
   &:before, &:after {
     content: "";
