--- a/src/templates/ui-grid/ui-grid-row.html
+++ b/src/templates/ui-grid/ui-grid-row.html
@@ -1,5 +1,5 @@
 <div>
-  <div ng-repeat="col in grid.columns" class="ui-grid-cell col{{ $index }}"> <!-- ng-style="{ 'cursor': row.cursor }" ng-class="col.colIndex()" class="{{col.cellClass}}" -->
+  <div ng-repeat="col in grid.renderedColumns" class="ui-grid-cell col{{ col.index }}"> <!-- ng-style="{ 'cursor': row.cursor }" ng-class="col.colIndex()" class="{{col.cellClass}}" -->
     <div class="ui-grid-vertical-bar">&nbsp;</div> <!-- ng-style="{height: rowHeight}" ng-class="{ ngVerticalBarVisible: !$last }" -->
     <div ui-grid-cell/>
   </div>
