Grid scrolls horizontally, but rendered columns jump/are off

--- a/src/templates/ui-grid/ui-grid-header.html
+++ b/src/templates/ui-grid/ui-grid-header.html
@@ -1,12 +1,12 @@
 <div class="ui-grid-top-panel">
   <div class="ui-grid-header ui-grid-header-viewport">
     <div class="ui-grid-header-canvas">
-      <div ng-repeat="col in grid.columns" class="ui-grid-header-cell col{{ $index }}" ng-style="columnStyle($index)">
-        <div class="ui-grid-vertical-bar">&nbsp;</div>
-        <div class="ui-grid-cell-contents">{{ col.displayName }}</span></div>
-      </div>
+        <div ng-repeat="col in grid.renderedColumns track by $index" class="ui-grid-header-cell col{{ col.index }}" ng-style="columnStyle($index)">
+          <div class="ui-grid-vertical-bar">&nbsp;</div>
+          <div class="ui-grid-cell-contents">{{ col.displayName }}</span></div>
+        </div>
     </div>
   </div>
-  
+
   <div ui-grid-menu></div>
 </div>
