Force layer compositing on grid by default

--- a/src/less/grid.less
+++ b/src/less/grid.less
@@ -3,6 +3,8 @@
   border: @gridBorderWidth solid @borderColor;
 
   .rounded(@gridBorderRadius);
+
+  .transform(translateZ(0));
 }
 
 .ui-grid-vertical-bar {
