--- a/src/templates/ui-grid/ui-grid-row.html
+++ b/src/templates/ui-grid/ui-grid-row.html
@@ -1,7 +1,6 @@
 <div>
-  <div ng-repeat="col in grid.renderedColumns track by $index" class="ui-grid-cell col{{ col.index }}" ng-style="$index == 0 && columnStyle($index)"> <!-- ng-style="{ 'cursor': row.cursor }" ng-class="col.colIndex()" class="{{col.cellClass}}" -->
-    <div class="ui-grid-vertical-bar">&nbsp;</div> <!-- ng-style="{height: rowHeight}" ng-class="{ ngVerticalBarVisible: !$last }" -->
-    <div ui-grid-cell/>
-    <!-- <div class="ui-grid-cell-contents">{{ row.entity[col.field] }}</div> -->
+  <div ng-repeat="col in grid.renderedColumns track by $index" class="ui-grid-cell col{{ col.index }}">
+    <div class="ui-grid-vertical-bar">&nbsp;</div>
+    <div ui-grid-cell col="col" row="row" row-index="row.index" col-index="col.colDef.index" />
   </div>
 </div>
