migrating old i18n strings.

--- a/src/less/goups.less
+++ b/src/less/goups.less
@@ -7,13 +7,13 @@
   .border-radius(@topPanelRadius, 0, 0, @topPanelRadius);
   min-height: 30px;
 }
-.ui-grid-group-panel .hidden {
-  display: none;
-}
-.ui-grid-group-panel .group-description {
-  margin-top: 5px;
-  margin-left: 5px;
-}
+  .ui-grid-group-panel .hidden {
+    display: none;
+  }
+  .ui-grid-group-panel .description {
+    margin-top: 5px;
+    margin-left: 5px;
+  }
 
 .ui-grid-group-list {
   list-style-type: none;
