WIP: resizing columns

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -64,3 +64,19 @@
   top: 0;
   bottom: 0;
 }
+
+.ui-grid-column-resizer {
+  top: 0;
+  bottom: 0;
+  width: 5px;
+  position: absolute;
+  cursor: pointer;
+
+  &.left {
+    left: 0;
+  }
+
+  &.right {
+    right: 0;
+  }
+}
