Show resizer overlay; move along with mouse

--- a/src/less/grid.less
+++ b/src/less/grid.less
@@ -5,6 +5,10 @@
   .rounded(@gridBorderRadius);
 
   .transform(translateZ(0));
+
+  &.column-resizing {
+  	cursor: pointer;
+  }
 }
 
 .ui-grid-vertical-bar {
