--- a/src/less/header.less
+++ b/src/less/header.less
@@ -80,3 +80,12 @@
     right: 0;
   }
 }
+
+.ui-grid-resize-overlay {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: @gridBorderWidth;
+  // background-color: @verticalBarColor;
+  background-color: red;
+}
