Column resizing works

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -86,6 +86,6 @@
   top: 0;
   height: 100%;
   width: @gridBorderWidth;
-  // background-color: @verticalBarColor;
-  background-color: red;
+  background-color: darken(@verticalBarColor, 15%);
+  // background-color: red;
 }
