WIP: column resizing

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -81,7 +81,7 @@
   }
 }
 
-.ui-grid-resize-overlay {
+.ui-grid.column-resizing .ui-grid-resize-overlay {
   position: absolute;
   top: 0;
   height: 100%;
