--- a/src/templates/ui-grid/uiGridHeaderCell.html
+++ b/src/templates/ui-grid/uiGridHeaderCell.html
@@ -1,8 +1,17 @@
-<div class="ngHeaderSortColumn {{col.headerClass}}" ng-style="{'cursor': col.cursor}" ng-class="{ 'ngSorted': !noSortVisible }">
+<div class="ui-grid-header-cell col{{ col.index }}" ng-style="renderIndex === 0 && columnStyle(renderIndex)">
+    <!-- <div ng-if="grid.options.enableColumnResizing && col.index != 0" class="ui-grid-column-resizer" ui-grid-column-resizer col="col" position="left" render-index="renderIndex">&nbsp;</div> -->
+
+    <div class="ui-grid-vertical-bar">&nbsp;</div>
+    <div class="ui-grid-cell-contents" col-index="renderIndex">{{ col.displayName }}</span></div>
+
+    <!-- <div ng-if="grid.options.enableColumnResizing && col.index != grid.renderedColumns.length - 1" class="ui-grid-column-resizer" ui-grid-column-resizer col="col" position="right"  render-index="renderIndex">&nbsp;</div> -->
+
+    <!-- <div class="ngHeaderSortColumn {{col.headerClass}}" ng-style="{'cursor': col.cursor}" ng-class="{ 'ngSorted': !noSortVisible }">
     <div ng-click="col.sort($event)" ng-class="'colt' + col.index" class="ngHeaderText">{{col.displayName}}</div>
-    <div class="ngSortButtonDown" ng-show="col.showSortButtonDown()"></div>
-    <div class="ngSortButtonUp" ng-show="col.showSortButtonUp()"></div>
-    <div class="ngSortPriority">{{col.sortPriority}}</div>
-    <div ng-class="{ ngPinnedIcon: col.pinned, ngUnPinnedIcon: !col.pinned }" ng-click="togglePin(col)" ng-show="col.pinnable"></div>
+      <div class="ngSortButtonDown" ng-show="col.showSortButtonDown()"></div>
+      <div class="ngSortButtonUp" ng-show="col.showSortButtonUp()"></div>
+      <div class="ngSortPriority">{{col.sortPriority}}</div>
+      <div ng-class="{ ngPinnedIcon: col.pinned, ngUnPinnedIcon: !col.pinned }" ng-click="togglePin(col)" ng-show="col.pinnable"></div>
+    </div>
+    <div ng-show="col.resizable" class="ngHeaderGrip" ng-click="col.gripClick($event)" ng-mousedown="col.gripOnMouseDown($event)"></div> -->
 </div>
-<div ng-show="col.resizable" class="ngHeaderGrip" ng-click="col.gripClick($event)" ng-mousedown="col.gripOnMouseDown($event)"></div>
