Fix horizontal scrolling

--- a/src/templates/ui-grid/uiGridHeaderCell.html
+++ b/src/templates/ui-grid/uiGridHeaderCell.html
@@ -1,4 +1,4 @@
-<div class="ui-grid-header-cell col{{ col.index }}" ng-style="renderIndex === 0 && columnStyle(renderIndex)">
+<div class="ui-grid-header-cell col{{ col.index }}">
     <!-- <div ng-if="grid.options.enableColumnResizing && col.index != 0" class="ui-grid-column-resizer" ui-grid-column-resizer col="col" position="left" render-index="renderIndex">&nbsp;</div> -->
 
     <div class="ui-grid-vertical-bar">&nbsp;</div>
