--- a/src/features/resize-columns/templates/columnResizer.html
+++ b/src/features/resize-columns/templates/columnResizer.html
@@ -1,9 +1,8 @@
 <div
   ui-grid-column-resizer
-  ng-if="grid.options.enableColumnResizing && col.index != grid.renderedColumns.length - 1"
+  ng-if="grid.options.enableColumnResizing"
   class="ui-grid-column-resizer"
   col="col"
   position="right"
   render-index="renderIndex">
 </div>
-<!--  -->
