Obey enableResizeColumns in colDef, allow resizing of last column

--- a/src/less/grid.less
+++ b/src/less/grid.less
@@ -26,6 +26,12 @@
   background-color: @verticalBarColor;
 }
 
+.ui-grid-header-cell:last-child .ui-grid-vertical-bar {
+  right: -1px;
+  width: @gridBorderWidth;
+  background-color: @headerVerticalBarColor;
+}
+
 // .ui-grid-vertical-bar-visible {
 //   width: 1px;
 //   background-color: @borderColor;
