--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -1,4 +1,4 @@
-<div class="ui-grid ui-i18n='en' grid{{ grid.id }}">
+<div class="ui-grid grid{{ grid.id }}">
   <!-- TODO (c0bra): add "scoped" attr here, eventually? -->
   <style ui-grid-style>
     .grid{{ grid.id }} {
