--- a/src/templates/menuTemplate.html
+++ b/src/templates/menuTemplate.html
@@ -11,7 +11,7 @@
             <li class="ngColListItem" ng-repeat="col in columns | ngColumns">
                 <label><input ng-disabled="col.pinned" type="checkbox" class="ngColListCheckbox" ng-model="col.visible"/>{{col.displayName}}</label>
 				<a title="Group By" ng-class="col.groupedByClass()" ng-show="col.groupable && col.visible" ng-click="groupBy(col)"></a>
-				<span class="ngGroupingNumber" ng-show="col.groupIndex > 0">{{col.groupIndex}}</span>          
+				<span class="ngGroupingNumber" ng-show="col.groupIndex > 0 && col.visible">{{col.groupIndex}}</span>          
             </li>
         </ul>
     </div>
