--- a/src/templates/menuTemplate.html
+++ b/src/templates/menuTemplate.html
@@ -9,7 +9,7 @@
         <span class="ngMenuText">{{i18n.ngMenuText}}</span>
         <ul class="ngColList">
             <li class="ngColListItem" ng-repeat="col in columns | ngColumns">
-                <label><input ng-disabled="col.pinned" type="checkbox" class="ngColListCheckbox" ng-model="col.visible"/>{{col.displayName}}</label>
+                <label><input ng-disabled="col.pinned || col.groupIndex > 0" type="checkbox" class="ngColListCheckbox" ng-model="col.visible"/>{{col.displayName}}</label>
 				<a title="Group By" ng-class="col.groupedByClass()" ng-show="col.groupable && col.visible" ng-click="groupBy(col)"></a>
 				<span class="ngGroupingNumber" ng-show="col.groupIndex > 0 && col.visible">{{col.groupIndex}}</span>          
             </li>
