feat(Native Scrolling): Adding native scrollbar handling
Enabled by default.

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -4,6 +4,7 @@
 @import 'body';
 @import 'cell';
 @import 'scrollbar';
+@import 'native-scrollbar';
 @import 'footer';
 @import 'pinning';
 @import 'rtl';
