Make virtual scrolling only require setting one parameter, not two

--- a/src/templates/ui-grid/ui-grid-body.html
+++ b/src/templates/ui-grid/ui-grid-body.html
@@ -10,8 +10,8 @@
   </div>
 
   <!-- native scrolling -->
-  <div ui-grid-native-scrollbar ng-if="grid.options.enableNativeScrolling" type="vertical"></div>
-  <div ui-grid-native-scrollbar ng-if="grid.options.enableNativeScrolling" type="horizontal"></div>
+  <div ui-grid-native-scrollbar ng-if="!grid.options.enableVirtualScrolling && grid.options.enableNativeScrolling" type="vertical"></div>
+  <div ui-grid-native-scrollbar ng-if="!grid.options.enableVirtualScrolling && grid.options.enableNativeScrolling" type="horizontal"></div>
 
   <!-- virtual scrolling -->
   <div ui-grid-scrollbar ng-if="grid.options.enableVirtualScrolling" type="vertical" scrolling-class="ui-grid-scrolling"></div>
