--- a/src/templates/cellEditTemplate.html
+++ b/src/templates/cellEditTemplate.html
@@ -1,4 +1,4 @@
-<div ng-cell-has-focus ng-dblclick="editCell()">
+<div ng-cell-has-focus ng-dblclick="CELL_EDITABLE_CONDITION && editCell()">
 	<div ng-edit-cell-if="!(isFocused && CELL_EDITABLE_CONDITION)">	
 		DISPLAY_CELL_TEMPLATE
 	</div>
