--- a/src/less/main.less
+++ b/src/less/main.less
@@ -6,7 +6,10 @@
 @import 'scrollbar';
 @import 'native-scrollbar';
 @import 'footer';
+@import 'menu';
+@import 'sorting';
 @import 'pinning';
+@import 'icons';
 @import 'rtl';
 @import 'elements';
 @import 'variables';
