--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -47,6 +47,9 @@
 // TODO: color for cell selections
 @focusedCell: #b3c4c7;
 
+// Color to use for enabled or selected settings/items/cells, etc. Should probably override the one above
+@selectedColor: #cecece;
+
 /**
 * @section Scrollbar styles
 */
