--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -59,4 +59,8 @@
   <div ui-grid-body></div>
 
   <div ui-grid-footer></div>
+
+  <div ui-grid-column-menu ng-if="grid.options.enableColumnMenu"></div>
+
+  <div ng-transclude></div>
 </div>
