rename enableColumnResizing to enableColumnResize for 2.x compatibility

--- a/src/features/resize-columns/templates/columnResizer.html
+++ b/src/features/resize-columns/templates/columnResizer.html
@@ -1,6 +1,6 @@
 <div
   ui-grid-column-resizer
-  ng-if="grid.options.enableColumnResizing"
+  ng-if="grid.options.enableColumnResize"
   class="ui-grid-column-resizer"
   col="col"
   position="right"
